display flex fixed column width and spacing

--- a/components/products/product-item.module.css
+++ b/components/products/product-item.module.css
@@ -11,17 +11,13 @@
  
   overflow: hidden;
   display: flex;
+  flex-wrap: wrap;
   height: 40rem;
   flex-grow: 1;
-  flex-shrink:0;
+  flex-shrink: 0;
   flex-basis: 25%;
+  min-width: 268px;
 }
-
-/*
-.gridItem {
-    padding: 0;
-}
-*/
 
 .itemImg {
   position: relative;
@@ -53,11 +49,13 @@
   text-align: center;
 }
 
+
 @media (max-width: 768px) {
   .item {
-    flex-direction: row;
+    justify-content: center;
   }
 
+  /*
   .itemImg {
     width: 40%;
     height: 14rem;
@@ -77,4 +75,5 @@
     flex-direction: row;
     justify-content: flex-end;
   }
+  */
 }
